# ragdag

./: .dockerignore  .gitignore  Dockerfile  README.md  TEST_PLAN.md  docker-compose.yml  pyproject.toml  ragdag
docs/: TESTING.md
docs/plans/: 2026-04-09-rag-quality-stack-design.md
engines/: __init__.py  ann.py  ask_cli.py  base.py  bm25.py  bm25_index.py  edge_index.py  embed_cli.py  embeddings.py  embeddings_v2.py  llm.py  local_engine.py  openai_engine.py  relate_cli.py  reranker.py  rrf.py  search_cli.py  similarity.py  synthesis.py  synthesis_cli.py
lib/: add.sh  ask.sh  chunk.sh  compat.sh  config.sh  graph.sh  init.sh  maintain.sh  parse.sh  search.sh  serve.sh  store.sh
sdk/ragdag/: __init__.py  core.py
server/: __init__.py  api.py  mcp.py
tests/: conftest.py  test_advanced.py  test_ann.py  test_api.py  test_bm25.py  test_bm25_index.py  test_chunk_fixed.py  test_chunk_strategies.py  test_crag.py  test_docs_hygiene.py  test_edge_index.py  test_embedding_engines.py  test_embeddings.py  test_embeddings_v2.py  test_explain.py  test_hyde.py  test_llm.py  test_maintenance.py  test_mcp.py  test_parse_security.py  test_pipeline_integration.py  test_propositions.py  test_provenance.py  test_quality_report.py  test_quality_stack.py  test_reranker.py  test_rrf.py  test_sdk_integration.py  test_search_hybrid.py  test_security_static.py  test_similarity.py  test_tsv_matching.py
tests/bash/: test_chunk.bats  test_compat.bats  test_config.bats  test_graph.bats  test_helper.bash  test_init.bats  test_maintain.bats  test_parse.bats  test_search.bats  test_store.bats
(+18 files in other folders)
